--- a/MediaPlayerController.ipynb
+++ b/MediaPlayerController.ipynb
@@ -6,7 +6,7 @@
       "name": "MediaPlayerController.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOKWF6GnubCqLRy2L6pn/bN",
+      "authorship_tag": "ABX9TyPs0XyNfzdyJND8yTczc24S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "import pandas as pd\n",
         "from google.colab.patches import cv2_imshow"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -52,20 +52,24 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 122
         },
-        "outputId": "7eb4a6da-2594-4d86-99f7-5c58746adb8f"
+        "outputId": "35e71982-4542-492b-8ef8-67e639a64a06"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -76,25 +80,13 @@
       "metadata": {
         "id": "73sCGCnDsgw0",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "71c8044c-b14f-4569-89aa-96c183a237eb"
+        "colab": {}
       },
       "source": [
         "!ln -s \"/content/drive/My Drive/CodeBrewers\" \"/content/CodeBrewers\""
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "ln: failed to create symbolic link '/content/CodeBrewers/CodeBrewers': File exists\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -106,7 +98,7 @@
       "source": [
         "model = keras.models.load_model('/content/CodeBrewers/GestureRecognition.h5')"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -156,7 +148,7 @@
         "    f.write(binary)\n",
         "  return filename"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -186,10 +178,15 @@
         "    img = np.reshape(img, (120,320,1))\n",
         "    cv2.accumulateWeighted(img, averageValue1, 0.02)  \n",
         "    resultingFrames1 = cv2.convertScaleAbs(averageValue1) \n",
+        "    resultingFrames1 = np.reshape(resultingFrames1, (120,320,1))\n",
         "    cv2_imshow(img)\n",
         "    cv2_imshow(resultingFrames1)\n",
-        "    prediction = model.predict(np.expand_dims(img, axis = 0))\n",
+        "    m = cv2.subtract(img,resultingFrames1)\n",
+        "    m = np.reshape(m, (120,320,1))\n",
+        "    cv2_imshow(m)\n",
+        "    prediction = model.predict(np.expand_dims(m, axis = 0))\n",
         "    ans = np.argmax(prediction[0])\n",
+        "    print(prediction[0][ans])\n",
         "    print(gesture[ans])\n",
         "  except Exception as err:\n",
         "    # Errors will be thrown if the user does not have a webcam or if they do not\n",
