Updated with train-test split

--- a/CodeBrewers.ipynb
+++ b/CodeBrewers.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "CodeBrewers.ipynb",
+      "name": "Copy of CodeBrewers.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,18 +16,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Rutuja-Kolte/CodeBrewers/blob/master/CodeBrewers.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "6Ab9iYzdgmO7",
-        "colab_type": "text"
+        "id": "6Ab9iYzdgmO7"
       },
       "source": [
         " **Setting Up**"
@@ -37,9 +25,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l20Rj1HP7LB-",
-        "colab_type": "code",
-        "colab": {}
+        "id": "l20Rj1HP7LB-"
       },
       "source": [
         "# To import everything needed for the project\n",
@@ -56,7 +42,9 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import cv2\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split"
       ],
       "execution_count": 1,
       "outputs": []
@@ -64,9 +52,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bkj0ogQ-T2CP",
-        "colab_type": "code",
-        "colab": {}
+        "id": "bkj0ogQ-T2CP"
       },
       "source": [
         "# To mount drive and access files from it\n",
@@ -80,24 +66,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mFovU4N8VbdF",
-        "colab_type": "code",
-        "colab": {}
+        "id": "mFovU4N8VbdF"
       },
       "source": [
         "# Used to create a symbolic link (symlink)\n",
         "\n",
         "!ln -s \"/content/drive/My Drive/CodeBrewers\" \"/content/CodeBrewers\""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pA0yTcvL_F_Z",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pA0yTcvL_F_Z"
       },
       "source": [
         "# To unzip files (images) from proj.zip\n",
@@ -110,8 +92,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9HkBcqD9g6MR",
-        "colab_type": "text"
+        "id": "9HkBcqD9g6MR"
       },
       "source": [
         "**Loading Images**"
@@ -120,9 +101,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jRsNYIIoCmXp",
-        "colab_type": "code",
-        "colab": {}
+        "id": "jRsNYIIoCmXp"
       },
       "source": [
         "# To get all the paths for the images to later load them\n",
@@ -141,9 +120,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ps9mMyvx_MQR",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ps9mMyvx_MQR"
       },
       "source": [
         "# Plots image for debugging\n",
@@ -157,15 +134,13 @@
         "  plt.ylabel(\"Height\")\n",
         "  plt.title(\"Image \" + path)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BJoQM_Yk__AX",
-        "colab_type": "code",
-        "colab": {}
+        "id": "BJoQM_Yk__AX"
       },
       "source": [
         "plot_image(imagepaths[0]) # Plots the first image from the imagepaths array"
@@ -176,9 +151,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LuQLrqJ2ZmOM",
-        "colab_type": "code",
-        "colab": {}
+        "id": "LuQLrqJ2ZmOM"
       },
       "source": [
         "# To load all the images into an array, X, and all the labels into an array, Y\n",
@@ -207,8 +180,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dwfHRNojhO5g",
-        "colab_type": "text"
+        "id": "dwfHRNojhO5g"
       },
       "source": [
         "**Creating Model**"
@@ -217,9 +189,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Hq0ej5yDZq2e",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Hq0ej5yDZq2e"
       },
       "source": [
         "# To import keras model and hidden layers for the Convolutional Neural Network (CNN)\n",
@@ -233,9 +203,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iMiPmBWLYrkG",
-        "colab_type": "code",
-        "colab": {}
+        "id": "iMiPmBWLYrkG"
       },
       "source": [
         "# To construct the model\n",
@@ -251,35 +219,18 @@
         "model.add(Dense(128, activation='relu'))\n",
         "model.add(Dense(10, activation='softmax'))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "amOpISRiYw3z",
-        "colab_type": "code",
-        "colab": {}
+        "id": "amOpISRiYw3z"
       },
       "source": [
         "# To configure the model for training\n",
         "\n",
         "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])"
-      ],
-      "execution_count": 11,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GMzJWqkGbkYl",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# To train the model\n",
-        "\n",
-        "model.fit(X, Y, epochs=5, batch_size=64, verbose=2, validation_data=(X, Y))"
       ],
       "execution_count": null,
       "outputs": []
@@ -287,9 +238,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "n1zE7Dn4fJt0",
-        "colab_type": "code",
-        "colab": {}
+        "id": "GMzJWqkGbkYl"
+      },
+      "source": [
+        "# To train the model\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.33, random_state=42)\n",
+        "model.fit(X_train, Y_train, epochs=5, batch_size=64, verbose=2, validation_data=(X_test, Y_test))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n1zE7Dn4fJt0"
       },
       "source": [
         "# To save the model as an HDF5 file\n",
